welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:26: error: not found: value faireMotif
faireMotif(Color.red)
^FlowerPot:27: error: not found: value faireMotif
faireMotif(Color.blue)
^FlowerPot:28: error: not found: value faireMotif
faireMotif(Color.green)
^FlowerPot:29: error: not found: value faireMotif
faireMotif(Color.yellow)
^