welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
//Decouper en 4 quarts avec la croix centrale à faire à part

def growFlowers() 
{
	leveBrosse()
	baisseBrosse()
	
	
}













def Motif()
{	
faireMotif(Color.red)
faireMotif(Color.blue)
faireMotif(Color.green)
faireMotif(Color.yellow)
}